--- a/src/components/IU/style.css
+++ b/src/components/IU/style.css
@@ -1,21 +1,25 @@
-button{
-    border: 2px  solid #c7c7c7;
-    border-radius: 40px;
-    padding: .45rem .75rem; 
-    justify-content: center;
-    font-size: 1rem;
-    transition: all .25s cubic-bezier(.175, .885, .32, 1.275);
-    filter: grayscale(100%);
+a{
+    text-decoration: none;
+    list-style-type:none;
 }
-button:hover {
-    border-color: currentColor;
+.link{
+    
+    margin-left: 4px;
+    margin-right: 4px;
+    color: #ccc;
+    font-size: 15px;
+    letter-spacing: 1px
+}
+.active{
+    padding-bottom: 40px;
+    border-bottom: 2px solid #fff;
 }
 .NavLink{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    font-family: 'Open Sans', sans-serif;
 }
 .OnOff{
+    transition: 3.S;
     border: 2px  solid #c7c7c7;
     width: 10px;
      height: 10px;
@@ -29,4 +33,12 @@ button:hover {
 .Switch{
     display: flex;
     justify-content: flex-end;
+}
+header{
+    display: flex;
+    width: 100%;
+    height: 70px;
+    background: rgba(0,0,0,0.8);
+    align-items: center;
+    justify-content: center;
 }
