--- a/src/components/IU/style.css
+++ b/src/components/IU/style.css
@@ -1,22 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
 a{
+    margin-top: 17px;
     text-decoration: none;
     list-style-type:none;
 }
 .link{
     
-    margin-left: 4px;
-    margin-right: 4px;
+    margin-left: 30px;
+    margin-right: 30px;
     color: #ccc;
     font-size: 15px;
     letter-spacing: 1px
 }
 .active{
-    padding-bottom: 40px;
+    
     border-bottom: 2px solid #fff;
 }
 .NavLink{
+    margin-top: 35px;
     display: flex;
     font-family: 'Open Sans', sans-serif;
+    margin-right: 15px;
+    text-decoration: none;
 }
 .OnOff{
     transition: 3.S;
@@ -35,10 +40,90 @@ a{
     justify-content: flex-end;
 }
 header{
+    position: fixed;
     display: flex;
     width: 100%;
-    height: 70px;
-    background: rgba(0,0,0,0.8);
-    align-items: center;
+    height:95px;
+    background: transparent;
+    justify-content: space-between;
+}
+.slider{
+    background: url(../img/srb.jpeg) no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 1000px;
+    display: flex;
     justify-content: center;
+    align-items: center;
+
+    
+}
+.imagenLogo{
+    width: 250px;
+}
+.sliders{
+    height: 100px;
+}
+.text{
+    font-family: 'Rye', cursive;
+    color: white;
+    font-size: 4rem;
+    text-shadow: 0 0 10px yellow;
+}
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans:300);
+
+body {
+    font-family: 'Alegreya Sans', sans-serif;
+}
+
+/* Sticky footer position and size
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 240px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height:260px;
+}
+
+
+/* Sticky footer style and color
+-------------------------------------------------- */
+footer {
+  padding-top: 30px;
+  background-color: #292c2f;
+  color: #bbb;
+  margin-bottom: 0px;
+}
+
+footer a {
+  color: #999;
+}
+
+footer a:hover, footer a:focus {
+  color: #aaa;
+  text-decoration:none;
+  border-bottom:1px dotted #999;
+}
+
+footer .form-control {
+    background-color: #1f2022;
+    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+    border: none;
+    resize: none;
+    color: #d1d2d2;
+}
+a:not([href]):not([tabindex]) {
+    color: #ccc;;
+}
+.logoF{
+    width: 60px;
 }
