--- a/src/components/pages/ConsultBarber/estilosBarber.css
+++ b/src/components/pages/ConsultBarber/estilosBarber.css
@@ -1,4 +1,5 @@
 /*BARBEROS*/
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 .mainConsultBarber{
     width: 100%;
     height: 65rem;
@@ -74,11 +75,21 @@
     justify-content: flex-end;
     align-items: center;
     position: relative;
-    bottom: 8rem;
+    bottom: 5rem;
     z-index: 1;
     color: #F5F5F5;
 }
 
 #input-ConsultBarber{
     margin-top: 1.5rem;
+}
+.nameB{
+    font-family: Open Sans;
+    font-weight: 300;
+	line-height: 1;
+}
+.nameR{
+    font-family: Open Sans;
+    font-weight: 700;
+    font-size: 1.5rem;
 }
