--- a/src/components/layouts/css/card.css
+++ b/src/components/layouts/css/card.css
@@ -1,5 +1,16 @@
+@property --rotate {
+  syntax: "<angle>";
+  initial-value: 132deg;
+  inherits: false;
+}
+
+:root {
+  --card-height: 65vh;
+  --card-width: calc(var(--card-height) / 1.5);
+}
+
 .cards{
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
   padding: 20px;
   grid-gap: 40px;
@@ -8,46 +19,80 @@
   background-color: #1c1b29;
   border-radius: 20px;
   box-shadow: 0 0 30px rgba(0,0,0,0.18);
+  width: var(--card-width);
 }
 .containerB{
   position: relative;
   clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
+  background: #191c29;
+  width: var(--card-width);
+  height: var(--card-height);
+  padding: 3px;
+  position: relative;
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  font-size: 1.5em;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
 }
-img{
+.containerB:hover{
+  color: rgb(88 199 250 / 100%);
+  transition: color 1s;
+}
+.containerB:hover:before, .containerB:hover:after {
+  animation: none;
+  opacity: 0;
+}
+.containerB::before {
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 8px;
+  background-image: linear-gradient(
+    var(--rotate)
+    , #5ddcff, #3c67e3 43%, #4e00c2);
+    position: absolute;
+    z-index: -1;
+    top: -1%;
+    left: -2%;
+    animation: spin 2.5s linear infinite;
+}
+
+.containerB::after {
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 6);
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 6));
+  background-image: linear-gradient(
+    var(--rotate)
+    , #5ddcff, #3c67e3 43%, #4e00c2);
+    opacity: 1;
+  transition: opacity .5s;
+  animation: spin 2.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
+}
+.card img{
   width: 100%;
   display: block;
   border-radius: 20px 20px 0 0;
-}
-.containerB:after{
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 20px 20px 0 0;
-  opacity: 0.7;
-}
-.card1>.containerB:after{
-  background-image: linear-gradient(
-      135deg,
-      #0100ec,
-      #fb36f4
-  );
-}
-.card2>.containerB:after{
-  background-image: linear-gradient(
-      135deg,
-      #2bdce3,
-      #42ffdb
-  );
-}
-.card3>.containerB:after{
-  background-image: linear-gradient(
-      135deg,
-      #ffab1d,
-      #f8501c
-  );
 }
 .details{
   padding: 20px 10px;
