--- a/src/components/IU/styleB.css
+++ b/src/components/IU/styleB.css
@@ -6,8 +6,8 @@
     background: #e8e8e8;
     border: 1px solid #e8e8e8;
     transition: all .3s;
-    box-shadow: 6px 6px 12px hsl(0, 3%, 25%),
-                -6px -6px 12px black;
+    box-shadow: 6px 6px 12px #c5c5c5,
+                -6px -6px 12px #ffffff;
    }
    
    .lineas:hover {
