--- a/src/components/layouts/css/profile.css
+++ b/src/components/layouts/css/profile.css
@@ -2,6 +2,9 @@
 .main-body {
     padding: 15px;
 }
+.cardsP{
+    margin-top: 100px;
+}
 .cardP {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
 }
@@ -53,4 +56,16 @@
 }
 .imgP{
     margin-top: 0px;
+}
+.progress{
+    height: 5px;
+}
+.progress-bar{
+    width: 66%;
+}
+.mb-0{
+    color: #17a2b8!important;
+}
+.btnM{
+    margin-left: 10px;
 }
