--- a/src/components/layouts/css/card.css
+++ b/src/components/layouts/css/card.css
@@ -1,11 +1,45 @@
-.cards{
-  display: grid;
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.cards-barberos{
+  /* display: grid;
   grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
   padding: 20px;
-  grid-gap: 40px;
-  margin-top: 100px;
+  grid-gap: 40px; */
+  width: 100%;
+  height: 100%;
+  margin-top: 35em;
+  display: flex;
+  justify-content: space-around;
 }
-.card{
+
+.cards{
+  height: 22rem;
+  width: 40em;
+  border-radius: 20px;
+  background-color: #976e5a;
+  display: flex;
+}
+
+.figura{
+  height: 100%;
+  width: 40%;
+}
+
+.img_cards{
+  height: 100%;
+  width: 100%;
+  border-radius: 20px 0 0 20px;
+}
+
+.info{
+  height: 100%;
+  width: 60%;
+}
+
+/* .card{
   background-color: #1c1b29;
   border-radius: 20px;
   box-shadow: 0 0 30px rgba(0,0,0,0.18);
@@ -80,4 +114,4 @@
   color:white;
   text-transform:uppercase;
   padding:1em 1.5em;
-}
+} */
