--- a/src/components/pages/ConsultBarber/search.css
+++ b/src/components/pages/ConsultBarber/search.css
@@ -1,14 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400);
 
-.webdesigntuts-workshop {
+.busqueda {
 	height: 100%;
 	position: absolute;
 	text-align: center;
 	width: 100%;
 }
 
-.webdesigntuts-workshop:before,
-.webdesigntuts-workshop:after {
+.form-busqueda{
+	height: auto;
+	width: auto;
+}
+
+/* .busqueda:before,
+.busqueda:after {
 	content: '';
 	display: block;	
 	height: 1px;
@@ -17,19 +22,18 @@
 	position: absolute;
 	width: 800px;
 }
-
-.webdesigntuts-workshop:before {
+.busqueda:before {
 	background: #444;
 	top: 265px;
 }
 
-.webdesigntuts-workshop:after {
+.busqueda:after {
 	background: #000;
 	background: linear-gradient(left, #151515, #000, #151515);	
 	top: 266px;
-}
+} */
 
-.webdesigntuts-workshop form {
+.busqueda form {
 	background: #111;
 	background: linear-gradient(#1b1b1b, #111);
 	border: 1px solid #000;
@@ -43,7 +47,7 @@
 	z-index: 1;
 }
 
-.webdesigntuts-workshop input {
+.busqueda input {
 	background: #222;	
 	background: linear-gradient(#333, #222);	
 	border: 1px solid #444;
@@ -62,19 +66,19 @@
 	width: 200px;
 }
 
-.ie .webdesigntuts-workshop input {
+/* .ie .busqueda input {
 	line-height: 40px;
-}
+} */
 
-.webdesigntuts-workshop input::-webkit-input-placeholder {
+.busqueda input::-webkit-input-placeholder {
    color: #888;
 }
 
-.webdesigntuts-workshop input:-moz-placeholder {
+.busqueda input:-moz-placeholder {
    color: #888;
 }
 
-.webdesigntuts-workshop input:focus {
+.busqueda input:focus {
 	animation: glow 800ms ease-out infinite alternate;
 	background: #222922;
 	background: linear-gradient(#333933, #222922);
@@ -84,15 +88,15 @@
 	outline: none;
 }
 
-.webdesigntuts-workshop input:focus::-webkit-input-placeholder { 
+.busqueda input:focus::-webkit-input-placeholder { 
 	color: #efe;
 }
 
-.webdesigntuts-workshop input:focus:-moz-placeholder {
+/* .busqueda input:focus:-moz-placeholder {
 	color: #efe;
-}
+} */
 
-.webdesigntuts-workshop button {
+.busqueda button {
 	background: #222;
 	background: linear-gradient(#333, #222);
 	box-sizing: border-box;
@@ -113,17 +117,17 @@
 	position: relative;
 	text-shadow: 0 -1px 0 #000;
 	width: 80px;
-}	
+}
 
-.webdesigntuts-workshop button:hover,
-.webdesigntuts-workshop button:focus {
+.busqueda button:hover,
+.busqueda button:focus {
 	background: #292929;
 	background: linear-gradient(#393939, #292929);
 	color: #ffd17b;
 	outline: none;
 }
 
-.webdesigntuts-workshop button:active {
+.busqueda button:active {
 	background: #292929;
 	background: linear-gradient(#393939, #292929);
 	box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
@@ -139,4 +143,21 @@
 		border-color: #ffd17b;
 		box-shadow: 0 0 20px #ffd17b, inset 0 0 10px #ffd17b, 0 2px 0 #000;
     }
+}
+
+#seleciona{
+	width: 10rem;
+	height: 2.5rem;
+	margin-left: 2rem;
+	z-index: 20;
+	position: relative;
+}
+
+
+/*PRUEBA*/
+.prueba-section{
+	height: 100%;
+	position: absolute;
+	text-align: center;
+	width: 100%;
 }
