--- a/src/components/layouts/css/card.css
+++ b/src/components/layouts/css/card.css
@@ -3,6 +3,33 @@
   padding: 0;
 }
 
+option{ background-color: #222; }
+
+/* hr{
+  height: 0.2rem;
+  width: 90%;
+  background-color: white;
+  margin: 0;
+} */
+/*clases*/
+.mainConsultBarber{
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.nom-categoria{
+  height: 4rem;
+  width: 90%;
+  color: white;
+  font-size: 4rem;
+  font-weight: bold;
+  margin-top: 1.5rem;
+  margin-left: 1.5rem;
+  border-bottom: 5px solid white;
+}
+
 .cards-barberos{
   /* display: grid;
   grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
@@ -10,10 +37,11 @@
   grid-gap: 40px; */
   width: 100%;
   height: 100%;
-  margin-top: 35em;
   display: flex;
-  justify-content: space-around;
-}
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 0.5rem;
+} 
 
 .cards{
   height: 38rem;
@@ -25,6 +53,7 @@
   display: flex;
   flex-direction: column;
   border: 1px solid #1c1b29;
+  background: linear-gradient(#333, #222);
 }
 
 .figura{
@@ -68,98 +97,22 @@
   text-align: center;
 }
 
-/* .figura:after{
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 20px 20px 0 0 ;
-  opacity: 0.6;
+#seleciona{
+  background: linear-gradient(#333, #222);
+  color: white;
+  border: 1px solid #444;
 }
 
-.card1>.figura:after{
-  background-image: linear-gradient(
-      135deg,
-      #0100ec,
-      #fb36f4
-  );
-} */
-
-/* .card{
-  background-color: #1c1b29;
-  border-radius: 20px;
-  box-shadow: 0 0 30px rgba(0,0,0,0.18);
-}
-.containerB{
-  position: relative;
-  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
-  display:inline-block;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-.containerB img{
-  position: relative;
-  width: 100%;
-  display: block;
-  border-radius: 20px 20px 0 0;
-}
-.containerB:after{
-  content: "";
+#main{
+  width: 90%;
   height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 20px 20px 0 0;
-  opacity: 0.7;
+  margin-top: 22em;
   display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-evenly; */
+  flex-direction: row;
+  background: #111;
+	/* background: linear-gradient(#1b1b1b, #111); */
+  /* border: 2px solid #000; */
+  border-radius: 30px;
 }
-.card1>.containerB:after{
-  background-image: linear-gradient(
-      135deg,
-      #0100ec,
-      #fb36f4
-  );
-}
-.card2>.containerB:after{
-  background-image: linear-gradient(
-      135deg,
-      #2bdce3,
-      #42ffdb
-  );
-}
-.card3>.containerB:after{
-  background-image: linear-gradient(
-      135deg,
-      #ffab1d,
-      #f8501c
-  );
-}
-.details{
-  padding: 20px 10px;
-}
-.details>h3{
-  color: #ffffff;
-  font-weight: 600;
-  font-size: 18px;
-  margin: 10px 0 15px 0;
-}
-.details>p{
-  color: #a0a0a0;
-  font-size: 15px;
-  line-height: 30px;
-  font-weight: 400;
-}
-.btnShowB{
-  position: absolute;
-  bottom:19em;
-  right: 8em;
-  background-color:#8F0005;
-  border-radius:1.5em;
-  color:white;
-  text-transform:uppercase;
-  padding:1em 1.5em;
-} */
