--- a/src/components/pages/ConsultBarber/search.css
+++ b/src/components/pages/ConsultBarber/search.css
@@ -10,6 +10,17 @@
 .form-busqueda{
 	height: auto;
 	width: auto;
+	background: #111;
+	background: linear-gradient(#1b1b1b, #111);
+	border: 1px solid #000;
+	border-bottom: 0;
+	border-radius: 5px;
+	/* box-shadow: inset 0 0 0 1px #272727; */
+	display: inline-block;
+	margin: 220px auto 0;
+	padding: 20px;
+	position: relative;
+	z-index: 1;
 }
 
 /* .busqueda:before,
@@ -33,23 +44,8 @@
 	top: 266px;
 } */
 
-.busqueda form {
-	background: #111;
-	background: linear-gradient(#1b1b1b, #111);
-	border: 1px solid #000;
-	border-radius: 5px;
-	box-shadow: inset 0 0 0 1px #272727;
-	display: inline-block;
-	font-size: 0px;
-	margin: 220px auto 0;
-	padding: 20px;
-	position: relative;
-	z-index: 1;
-}
-
 .busqueda input {
-	background: #222;	
-	background: linear-gradient(#333, #222);	
+	background: linear-gradient(#333, #222);
 	border: 1px solid #444;
 	border-radius: 5px 0 0 5px;
 	box-shadow: 0 2px 0 #000;
@@ -60,7 +56,6 @@
 	font-size: 13px;
 	font-weight: 400;
 	height: 40px;
-	margin: 0;
 	padding: 0 10px;
 	text-shadow: 0 -1px 0 #000;
 	width: 200px;
@@ -151,13 +146,4 @@
 	margin-left: 2rem;
 	z-index: 20;
 	position: relative;
-}
-
-
-/*PRUEBA*/
-.prueba-section{
-	height: 100%;
-	position: absolute;
-	text-align: center;
-	width: 100%;
 }
