--- a/src/components/layouts/css/card.css
+++ b/src/components/layouts/css/card.css
@@ -54,12 +54,14 @@ option{ background-color: #222; }
   flex-direction: column;
   border: 1px solid #1c1b29;
   background: linear-gradient(#333, #222);
+  align-items: center;
 }
 
 .figura{
   height: 60%;
   width: 100%;
   clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
+  margin: 0;
 }
 
 .img_cards{
@@ -82,13 +84,6 @@ option{ background-color: #222; }
 }
 
 /*identificadores*/
-
-#btn-VerMas{
-  width: 5rem;
-  height: 3rem;
-  border: 1px solid black;
-  border-radius: 15px;
-}
 
 #nombre{
   color: #fefd9f;
@@ -115,4 +110,35 @@ option{ background-color: #222; }
 	/* background: linear-gradient(#1b1b1b, #111); */
   /* border: 2px solid #000; */
   border-radius: 30px;
+}
+
+/*boton ver mas*/
+.elBoton{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  bottom: 6rem;
+  display: flex;
+  overflow:hidden;
+}
+
+.btn-VerMas{
+  position: absolute;
+  width: 8rem;
+  height: auto;
+  border: 1px solid black;
+  border-radius: 30px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+  transform: all 500ms ease-out;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.cards:hover{
+  transition: ease-in-out 1s;
+  filter: blur(5px);
+  opacity: 1;
+  visibility: visible;
 }
