--- a/src/components/IU/css/card.css
+++ b/src/components/IU/css/card.css
@@ -2,52 +2,11 @@
   margin: 0;
   padding: 0;
 }
-
-option{ background-color: #222; }
-
-/* hr{
-  height: 0.2rem;
-  width: 90%;
-  background-color: white;
-  margin: 0;
-} */
 /*clases*/
-.mainConsultBarber{
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.nom-categoria{
-  height: 4.5rem;
-  width: 50%;
-  text-align: center;
-  color: white;
-  font-size: 4rem;
-  font-weight: bold;
-  margin-top: 1.5rem;
-  border-bottom: 5px solid white;
-}
-
-.cards-barberos{
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
-  padding: 20px;
-  grid-gap: 40px; */
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-top: 0.5rem;
-} 
 
 .cards{
   height: 38rem;
   width: 25em;
-  border-radius: 20px;
-  background-color: #1c1b29;
   border-radius: 20px;
   box-shadow: 0 0 30px rgba(0,0,0,0.18);
   display: flex;
@@ -55,8 +14,6 @@ option{ background-color: #222; }
   border: 1px solid #1c1b29;
   background: linear-gradient(#333, #222);
   align-items: center;
-  position: relative;
-  overflow: hidden;
 }
 
 .figura{
@@ -64,18 +21,15 @@ option{ background-color: #222; }
   width: 100%;
   clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
   margin: 0;
-  position: relative;
   overflow: hidden;
   display: flex;
   justify-content: center;
-  transition: all 500ms ease-out;
 }
 
 .img_cards{
   height: 100%;
   width: 100%;
   border-radius: 20px 20px 0 0;
-  transition: all 500ms ease-out;
 }
 
 .infoBasica{
@@ -84,7 +38,6 @@ option{ background-color: #222; }
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: all 500ms ease-out;
 }
 
 .info{
@@ -99,23 +52,6 @@ option{ background-color: #222; }
   font-weight: bold;
   font-size: 2.5rem;
   text-align: center;
-}
-
-#seleciona{
-  background: linear-gradient(#333, #222);
-  color: white;
-  border: 1px solid #444;
-}
-
-#main{
-  width: 90%;
-  height: 100%;
-  margin-top: 22em;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  background: linear-gradient(rgb(17, 17, 17), #333);
-  border-radius: 30px;
 }
 
 /*boton ver mas*/
@@ -143,7 +79,6 @@ option{ background-color: #222; }
   text-align: center;
   visibility: hidden;
   opacity: 0;
-  top: 17rem;
   z-index: 10;
   color: white;
 }
@@ -157,4 +92,10 @@ option{ background-color: #222; }
 .blur:hover, .btn-VerMas{
   opacity: 1;
   visibility: visible;
+}
+
+.btn-VerMas:hover{
+  background-color: white;
+  border: 1px solid black;
+  color: black
 }
