--- a/src/components/IU/css/style.css
+++ b/src/components/IU/css/style.css
@@ -52,7 +52,7 @@ header{
     z-index: 1000;
 }
 .slider{
-    background: url(../img/srb.jpeg) no-repeat center center;
+    background: url(../../img/srb.jpeg) no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 1000px;
@@ -204,7 +204,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 .containers{
     margin-top: 100px;
-    background: url(../img/fondo/barberContact.jpg) no-repeat center center;
+    background: url(../../img/fondo/barberContact.jpg) no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 100%;
