--- a/src/components/IU/css/card.css
+++ b/src/components/IU/css/card.css
@@ -81,12 +81,6 @@
   color: white;
 }
 
-/* .cards:hover > .btn-VerMas {
-  opacity: 1;
-  visibility: visible;
-  filter: none;
-} */
-
 .blur:hover, .btn-VerMas{
   opacity: 1;
   visibility: visible;
@@ -107,17 +101,18 @@
   left: 0;
   background-color: rgba(0, 0, 0, .5);
   position: absolute;
+  padding: 40px;
   z-index: 10;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .contenedorModal{
-  width: 50em;
-  min-height: 10em;
+  width: 90em;
+  min-height: 50em;
+  top: 7em;
   background-color: #fff;
-  position: relative;
+  position: fixed;
   border-radius: 5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 20px;
@@ -128,4 +123,32 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #E8E8E8;
+}
+
+.encabezadoModal h3{
+  font-weight: bold;
+  font-size: 2rem;
+  color: #1766DC;
+}
+
+.btn-cerrar{
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  cursor:pointer;
+  transition: .3 ease all;
+  border-radius: 5px;
+  color: #1766DC;
+}
+.btn-cerrar:hover {
+  background-color: #F2F2F2;
+}
+
+svg{
+  width: 100%;
+  height: 100%;
 }
