--- a/src/components/IU/css/card.css
+++ b/src/components/IU/css/card.css
@@ -109,7 +109,7 @@
 
 .contenedorModal{
   width: 90em;
-  min-height: 50em;
+  height: 50em;
   top: 7em;
   background-color: #fff;
   position: fixed;
@@ -151,4 +151,18 @@
 svg{
   width: 100%;
   height: 100%;
+}
+
+.btn-cita{
+  position: absolute;
+  right: 20px;
+  bottom: 15px;
+  width: 6rem;
+  height: 3rem;
+  border-radius: 50px;
+  background-color: #1766DC;
+}
+
+.img-vtn{
+  width: 20rem;
 }
