agregando informacion en modal

--- a/src/components/IU/css/card.css
+++ b/src/components/IU/css/card.css
@@ -153,16 +153,42 @@ svg{
   height: 100%;
 }
 
+.informacion-modal{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.infoBasica-modal{
+  width: 75%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.campoimg-modal{
+  width: 25%;
+  height: 80%;
+}
+
 .btn-cita{
   position: absolute;
   right: 20px;
   bottom: 15px;
   width: 6rem;
   height: 3rem;
-  border-radius: 50px;
+  border-radius: 5px;
   background-color: #1766DC;
 }
 
 .img-vtn{
   width: 20rem;
+  height: 30rem;
+}
+
+#nombre-modal{
+  width: 100%;
+  text-align: center;
+  font-size: 4rem;
 }
