--- a/src/components/IU/css/modal.css
+++ b/src/components/IU/css/modal.css
@@ -12,8 +12,8 @@
   }
   
   .contenedorModal{
-    width: 70em;
-    height: 30em;
+    width: 72em;
+    height: 36em;
     top: 7.2em;
     background-color: #fff;
     position: fixed;
@@ -55,4 +55,70 @@
   svg{
     width: 100%;
     height: 100%;
+  }
+
+  .informacion-modal{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .infoBasica-modal{
+    width: 63%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .campoimg-modal{
+    width: 35%;
+    height: 100%;
+  }
+
+  .texto{
+    width: 100%;
+    height: auto;
+  }
+
+  .local-calendario{
+    width: 100%;
+    height: auto;
+  }
+
+  .local{
+    width: 50%;
+    height: 100%;
+  }
+  
+  .btn-cita{
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    width: 6rem;
+    height: 3rem;
+    border-radius: 5px;
+    background-color: #1766DC;
+    /* rgb(26, 67, 250) */
+  }
+  
+  .img-vtn{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .imgLocal{
+    width: 19rem;
+    height: 12.9rem;
+  }
+  
+  .calendario{
+    width: 30%;
+    height: 100%;
+  }
+  
+  #nombre-modal{
+    width: 100%;
+    text-align: center;
+    font-size: 3rem;
   }
