--- a/src/components/IU/css/modal.css
+++ b/src/components/IU/css/modal.css
@@ -1,3 +1,4 @@
+/*PERFIL*/
 .fondo{
     width: 100%;
     height: 100%;
@@ -84,10 +85,11 @@
   .local-calendario{
     width: 100%;
     height: auto;
+    display: flex;
   }
 
   .local{
-    width: 50%;
+    width: 100%;
     height: 100%;
   }
   
@@ -109,12 +111,7 @@
   
   .imgLocal{
     width: 19rem;
-    height: 12.9rem;
-  }
-  
-  .calendario{
-    width: 30%;
-    height: 100%;
+    height: 83.5%;
   }
   
   #nombre-modal{
@@ -122,3 +119,5 @@
     text-align: center;
     font-size: 3rem;
   }
+
+/*CITA*/
