--- a/src/components/layouts/css/calendario.css
+++ b/src/components/layouts/css/calendario.css
@@ -1,8 +1,10 @@
 .calendario{
   display: flex;
   justify-content: center;
+  height: 18rem;
+  width: 40%;
+  
 }
 .react-calendar {
-  margin-top: 120px;
   border-radius: 25px;
 }
