--- a/src/components/IU/css/style.css
+++ b/src/components/IU/css/style.css
@@ -25,6 +25,9 @@ a{
     margin-right: 15px;
     text-decoration: none;
 }
+.NavLink a:hover{
+    text-decoration: none;
+}
 .OnOff{
     transition: 3.S;
     border: 2px  solid #c7c7c7;
