--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -12,7 +12,7 @@
     justify-content: center;
   }
   
-  .contenedorModal{
+  .contenedorModalPerfil{
     width: 72em;
     height: 36em;
     top: 7.2em;
@@ -58,7 +58,7 @@
     height: 100%;
   }
 
-  .informacion-modal{
+  .contenedor-modal{
     width: 100%;
     height: 100%;
     display: flex;
@@ -121,8 +121,35 @@
   }
 
 /*CITA*/
+.contenedorModalCita{
+  width: 65em;
+  height: 36em;
+  top: 7.2em;
+  background-color: #fff;
+  position: fixed;
+  border-radius: 5px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 20px;
+}
 
-.form_Cita{
+.info_Cita{
+  width: 100%;
+  height: 85%;
+  display: flex;
+}
+
+.contenedor_calendario{
   width: 30%;
+  height: 100%;
+  text-align: center;
+}
+
+#form_Cita{
+  width: 60%;
+  height: 100%;
+}
+
+.calendario{
+  width: 100%;
   height: 100%;
 }
