--- a/src/components/pages/ConsultBarber/search.css
+++ b/src/components/pages/ConsultBarber/search.css
@@ -12,7 +12,7 @@
 	width: auto;
 	background: #111;
 	background: linear-gradient(#1b1b1b, #111);
-	border: 1px solid #000;
+	/* border: 1px solid #000; */
 	border-bottom: 0;
 	border-radius: 5px;
 	/* box-shadow: inset 0 0 0 1px #272727; */
@@ -77,8 +77,6 @@
 	animation: glow 800ms ease-out infinite alternate;
 	background: #222922;
 	background: linear-gradient(#333933, #222922);
-	border-color: #393;
-	box-shadow: 0 0 5px rgba(0,255,0,.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000;
 	color: #efe;
 	outline: none;
 }
