--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -101,7 +101,15 @@
     height: 3rem;
     border-radius: 5px;
     background-color: #1766DC;
+    border: 1px solid #1654b2;
+    font-weight: bold;
+    color: white;
     /* rgb(26, 67, 250) */
+  }
+
+  .btn-cita:hover{
+    background-color: #144ea5;
+    border: 1px solid #1766DC;
   }
   
   .img-vtn{
@@ -123,7 +131,7 @@
 /*CITA*/
 .contenedorModalCita{
   width: 65em;
-  height: 36em;
+  height: 35em;
   top: 7.2em;
   background-color: #fff;
   position: fixed;
@@ -134,7 +142,7 @@
 
 .info_Cita{
   width: 100%;
-  height: 85%;
+  height: 90%;
   display: flex;
 }
 
@@ -152,4 +160,25 @@
 .calendario{
   width: 100%;
   height: 100%;
+}
+
+.agendar{
+  position: absolute;
+  bottom: 1rem;
+  width: 6rem;
+  height: 3rem;
+  border-radius: 5px;
+  background-color: #eee;
+  border: 1px solid black;
+  font-weight: bold;
+}
+
+.agendar:hover{
+  background-color: rgb(222, 222, 222);
+}
+
+#agendar{
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
 }
