--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -16,11 +16,12 @@
     width: 72em;
     height: 36em;
     top: 7.2em;
-    background-color: #fff;
+    background-color: #000;
     position: fixed;
     border-radius: 5px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 20px;
+    color: white;
   }
   
   .encabezadoModal{
@@ -130,8 +131,8 @@
 
 /*CITA*/
 .contenedorModalCita{
-  width: 65em;
-  height: 35em;
+  width: 62em;
+  height: 38em;
   top: 7.2em;
   background-color: #fff;
   position: fixed;
@@ -147,7 +148,7 @@
 }
 
 .contenedor_calendario{
-  width: 30%;
+  width: 35%;
   height: 100%;
   text-align: center;
 }
@@ -181,4 +182,21 @@
   position: absolute;
   right: 1rem;
   bottom: 1rem;
+}
+
+.contenedor_horarios{
+  width: 100%;
+  height: 40%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.horarios{
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  gap: 5%;
 }
