--- a/src/components/IU/css/card.css
+++ b/src/components/IU/css/card.css
@@ -67,24 +67,54 @@
 }
 
 .btn-VerMas{
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
-  
+  --color: #ffd17b;
+  font-family: inherit;
+  display: inline-block;
+  width: 8em;
+  height: 2.6em;
+  line-height: 2.5em;
+  margin: 20px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color .5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 500;
+  color: var(--color);
+  background: linear-gradient(#1b1b1b, #111);
+ }
  
-}
-.btn-VerMas:hover,
-.btn-VerMas:focus {
-  border-color: white;
+ .btn-VerMas:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background: var(--color);
+  height: 150px;
+  width: 200px;
+  border-radius: 50%;
+ }
+ 
+ .btn-VerMas:hover {
   color: #fff;
-  /* box-shadow: 
-  inset -3.5em 0 white;  */
-  box-shadow: inset 5em 1em gold;
-
-}
+ }
+ 
+ .btn-VerMas:before {
+  top: 100%;
+  left: 100%;
+  transition: all .7s;
+ }
+ 
+ .btn-VerMas:hover:before {
+  top: -30px;
+  left: -30px;
+ }
+ 
+ .btn-VerMas:active:before {
+  border-color: #ffd17b;
+  transition: background 0s;
+ }
 
 .blur:hover, .btn-VerMas{
   opacity: 1;
