--- a/src/components/IU/css/card.css
+++ b/src/components/IU/css/card.css
@@ -67,18 +67,23 @@
 }
 
 .btn-VerMas{
-  position: absolute;
-  width: 8rem;
-  height: auto;
-  border: 1px solid white;
-  background-color: rgba(0,0,0,0.65);
-  font-size: 1.8rem;
-  font-weight: bold;
-  text-align: center;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 10;
-  color: white;
+  --color: #ffd17b;
+  font-family: inherit;
+  display: inline-block;
+  width: 8em;
+  height: 2.6em;
+  line-height: 2.5em;
+  margin: 20px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color .5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 500;
+  color: var(--color);
+  background: linear-gradient(#1b1b1b, #111);
 }
 
 .blur:hover, .btn-VerMas{
