--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    width: 100%;
-    height: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
