cambios en modales

--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -13,8 +13,8 @@
   }
   
   .contenedorModalPerfil{
-    width: 72em;
-    height: 35em;
+    width: 66em;
+    height: 38em;
     top: 7.2em;
     background: linear-gradient(#1b1b1b, #111);
     /* background-color: #292c2f; */
@@ -84,7 +84,7 @@
 
   .texto{
     width: 100%;
-    height: 54%;
+    height: 45%;
   }
 
   .local-calendario{
@@ -95,7 +95,7 @@
 
   .local{
     width: 100%;
-    height: 40%;
+    height: 55%;
   }
   
   .btn-cita{
@@ -151,9 +151,17 @@
     height: 100%;
     border-radius: 20px;
   }
+
+  .mdl_campoImgLocal{
+    width: 75%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
   .imgLocal{
-    width: 19rem;
+    width: 90%;
     height: 100%;
     box-shadow: 0 0 10px 2px black;
     border-radius: 8px;
@@ -165,12 +173,16 @@
     font-size: 3rem;
   }
 
+  #direccion{
+    height: 10%;
+  }
+
 /*CITA*/
 .contenedorModalCita{
-  width: 62em;
-  height: 38em;
+  width: 45em;
+  height: 45em;
   top: 7.2em;
-  background-color: #fff;
+  background: linear-gradient(#1b1b1b, #111);
   position: fixed;
   border-radius: 5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -183,17 +195,27 @@
 }
 
 .contenedor_calendario{
-  width: 35%;
-  height: 100%;
+  width: 100%;
+  height: 50%;
   text-align: center;
   display: flex;
+  justify-content: space-between;
 }
 
-#form_Cita{
-  width: 60%;
-  height: 100%;
+.form_Cita{
+  width: 100%;
+  height: 50%;
 }
 
+.mdl_inputform {
+  background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
+  height: 80%;
+  border-radius: 10px;
+}
 .calendario{
   width: 100%;
   height: 100%;
@@ -221,22 +243,47 @@
 }
 
 .contenedor_horarios{
-  width: 100%;
-  height: 40%;
+  width: 45%;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
+  font-size: 1.5rem;
+  color: black;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
 .horarios{
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   align-items: center;
   gap: 5%;
 }
 
+#mañana{
+  background-color: #050505;
+}
+
+#tarde{
+  background-color: #0f0f0f;
+}
+
+#noche{
+  background-color: #1f1e1e;
+}
+
 .btn-confirmar{
   background-color: red;
+}
+
+.mdl_Citatitulo{
+  width: 95%;
+  height: auto;
+  font-size: 2rem;
+  border-bottom: 1px solid #E8E8E8;
+  margin-bottom: 1rem;
+  color: #fff;
 }
