arregle las cards

--- a/src/components/layouts/css/modal.css
+++ b/src/components/layouts/css/modal.css
@@ -122,7 +122,6 @@
     background: white;
     margin-left: 1em;
     position: absolute;
-<<<<<<< HEAD
     display: flex;
     align-items: center;
     justify-content: center;
@@ -147,32 +146,6 @@
   .btn-cita:active .icon {
     transform: scale(0.95);
    }
-=======
-    right: 20px;
-    bottom: 20px;
-    width: 6rem;
-    height: 3rem;
-    border-radius: 5px;
-    /* background-color: #1766DC; */
-    background: linear-gradient(#333, #222);
-    /* border: 1px solid #1654b2; */
-    box-sizing: border-box;
-	  border: 1px solid #444;
-    font-weight: bold;
-    color: white;
-    /* rgb(26, 67, 250) */
-  }
-
-  .btn-cita:hover{
-    border: 1px solid black;
-    color: #ffd17b;
-  }
-
-  .btn-cita:active{
-    border: 1px solid #ffd17b;
-  }
-  
->>>>>>> 6783220f5f77c8a1637e5ae8c74079e9d76b3092
   .img-vtn{
     width: 100%;
     height: 100%;
@@ -227,25 +200,54 @@
 }
 
 .agendar{
+  background: linear-gradient(#1b1b1b, #111);
+  color: white;
+  font-family: inherit;
+  padding: 0.35em;
+  padding-left: 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
   position: absolute;
-  bottom: 1rem;
-  width: 6rem;
-  height: 3rem;
-  border-radius: 5px;
-  background-color: #eee;
-  border: 1px solid black;
-  font-weight: bold;
+  height: 2.8em;
+  padding-right: 3.3em;
+  left: 15px;
+  bottom: 15px;
 }
 
-.agendar:hover{
-  background-color: rgb(222, 222, 222);
-}
-
-#agendar{
+.agendar .icon {
+  background: white;
+  margin-left: 1em;
   position: absolute;
-  right: 1rem;
-  bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #111;
+  right: 0.3em;
+  transition: all 0.3s;
+ }
+ .agendar:hover .icon {
+  width: calc(100% - 0.6em);
+ }
+ .agendar .icon svg {
+  width: 1.1em;
+  transition: transform 0.3s;
+  color: black;
+ }
+.agendar:hover  .icon svg{
+  transform: translateX(0.1em);
 }
+.agendar:active .icon {
+  transform: scale(0.95);
+ }
 
 .contenedor_horarios{
   width: 100%;
