--- a/src/components/pages/ConsultBarber/search.css
+++ b/src/components/pages/ConsultBarber/search.css
@@ -17,7 +17,7 @@
 	border-radius: 5px;
 	/* box-shadow: inset 0 0 0 1px #272727; */
 	display: inline-block;
-	margin: 220px auto 0;
+	margin: 16rem auto 0;
 	padding: 20px;
 	position: relative;
 	z-index: 1;
