--- a/src/components/layouts/css/barberos.css
+++ b/src/components/layouts/css/barberos.css
@@ -35,6 +35,7 @@ text-shadow: 0 0 10px yellow;
     justify-content: space-evenly;
     flex-wrap: wrap;
     margin-top: 0.5rem;
+    row-gap: 10px;
 } 
 
 #seleciona{
@@ -45,11 +46,12 @@ text-shadow: 0 0 10px yellow;
 
 #main{
 width: 90%;
-height: 80%;
+height: 100%;
 margin-top: 8em;
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
 background: linear-gradient(rgb(17, 17, 17), #333);
 border-radius: 30px;
+padding-bottom: 3rem;
 }
