--- a/src/components/pages/ConsultBarber/estilosBarber.css
+++ b/src/components/pages/ConsultBarber/estilosBarber.css
@@ -2,10 +2,11 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 .mainConsultBarber{
     width: 100%;
-    height: 65rem;
+    height: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
+    margin: 5rem 0 5rem 0;
 }
 
 #consultBarber{
