--- a/src/components/layouts/css/profile.css
+++ b/src/components/layouts/css/profile.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+	background: linear-gradient(#1b1b1b, #111);
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: .25rem;
@@ -38,6 +38,14 @@
 }
 .mb-3, .my-3 {
     margin-bottom: 1rem!important;
+}
+
+.card, .list-group-item{
+    background: linear-gradient(#1b1b1b, #111);
+}
+
+.timeline-sm-item, .mt-3{
+    color: #fff
 }
 
 .bg-gray-300 {
@@ -79,7 +87,7 @@
     margin-right: 5px;
 }
 .cardP-box {
-    background:linear-gradient(#333, #222);;
+    background: linear-gradient(#1b1b1b, #111);
     background-clip: border-box;
     border: 1px solid #222;
     padding: 1.5rem;
