--- a/src/components/layouts/css/profile.css
+++ b/src/components/layouts/css/profile.css
@@ -326,7 +326,7 @@
         margin-bottom: 10px;
     }
 }
-.slider {
+.sliderP {
     background-color: #ffffff2b;
     border-radius: 100px;
     padding: 1px;
@@ -342,7 +342,7 @@
           #22cc3f 0px 0px 0px 0px inset, rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
   }
   
-  .slider::after {
+  .sliderP::after {
     content: "";
     display: flex;
     top: 2.3px;
@@ -357,12 +357,12 @@
     will-change: left, background-color;
   }
   
-  .switch input[type="checkbox"]:checked + .slider {
+  .switch input[type="checkbox"]:checked + .sliderP {
     box-shadow: rgba(0, 0, 0, 0.62) 0px 0px 5px inset, #22cc3f 0px 0px 0px 2px inset, #22cc3f 0px 0px 0px 24px inset,
           rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
   }
   
-  .switch input[type="checkbox"]:checked + .slider::after {
+  .switch input[type="checkbox"]:checked + .sliderP::after {
     left: 24px;
   }
   
