--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -13,7 +13,10 @@
 
 .h1form {
 	font-weight: bold;
-	margin: 0;
+	color: #FFFFFF;
+	margin: 3%;
+	font-size: 200%;
+	text-shadow: 0 0 10px yellow
 }
 
 /* h2 {
@@ -40,16 +43,63 @@
 }
 
 .buttonform {
-	border-radius: 20px;
-	border: 1px solid #976e5a;
-	background-color: #976e5a;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
+  --color: #ffd17b;
+  font-family: inherit;
+  display: inline-block;
+  width: 8em;
+  height: 2.6em;
+  line-height: 2.5em;
+  margin: 20px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color .5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 500;
+  color: var(--color);
+  background: linear-gradient(#1b1b1b, #111);
+}
+.buttonform:before{
+	content: "";
+  position: absolute;
+  z-index: -1;
+  background: var(--color);
+  height: 150px;
+  width: 200px;
+  border-radius: 50%;
+}
+ 
+.buttonform:hover {
+  color: #fff;
+ }
+ 
+ .buttonform:before {
+  top: 100%;
+  left: 100%;
+  transition: all .7s;
+ }
+ 
+ .buttonform:hover:before {
+  top: -30px;
+  left: -30px;
+ }
+ 
+ .buttonform:active:before {
+  border-color: #ffd17b;
+  transition: background 0s;
+ }
+
+.blur:hover, .buttonform{
+  opacity: 1;
+  visibility: visible;
+}
+
+.buttonform:hover{
+  background:linear-gradient(#1b1b1b, #111) ;
+  border: 1px solid black;
+  color: black
 }
 
 .buttonform:active {
@@ -66,7 +116,7 @@
 }
 
 .formlr {
-	background-color: #FFFFFF;
+	background-color: rgb(17, 17, 17);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -77,7 +127,7 @@
 }
 
 .inputform {
-	background-color: #eee;
+	background: linear-gradient(#333, #222);
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
@@ -85,10 +135,10 @@
 }
 
 .containerform {
-	background-color: #fff;
+	background-color: #0000;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+	0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
 	width: 768px;
@@ -155,9 +205,11 @@
 }
 
 .overlay {
-	background: #976e5a;
+	background: rgb(26, 26, 26);
 	background: -webkit-linear-gradient(to left, #503e34, #c59377);
 	background: linear-gradient(to left #503e34, #976e5a);
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+	0 10px 10px rgba(0,0,0,0.22);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
