--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -49,7 +49,7 @@
   width: 8em;
   height: 2.6em;
   line-height: 2.5em;
-  margin: 20px;
+  margin: 5%;
   position: relative;
   overflow: hidden;
   border: 2px solid var(--color);
@@ -277,4 +277,10 @@
 }
 .rBtn label{
 	margin-right: 10px;
+}
+#Trabajador{
+	padding-right: 10%;
+}
+#Cliente{
+	padding-left: 10%;
 }
