--- a/src/components/IU/css/style.css
+++ b/src/components/IU/css/style.css
@@ -12,12 +12,19 @@ a{
     font-size: 15px;
     letter-spacing: 1px;
     transition: 0.4s;
+    /* padding: 0 10px; */
 }
+
+.a{
+    width: 20%;
+    height: 15%;
+}
+
 .NavLink .active{
     border-bottom: 2px solid #fff;
 }
 .NavLink{
-    width:40%;
+    width: 40rem;
     height: 4rem;
     display: flex;
     font-family: 'Open Sans', sans-serif;
@@ -342,6 +349,19 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
     }
     #check:checked ~ .NavLink{
         right: -100%;
+    }
+    .submenus{
+        width: 100%;
+        height: auto;
+        text-align: center;
+    }
+    .imgP{
+        width: auto;
+        height: auto;
+        padding: 0!important;
+        text-align: center;
+        display: flex;
+        justify-content: center;
     }
 }
 
