--- a/src/components/layouts/css/lore.css
+++ b/src/components/layouts/css/lore.css
@@ -5,7 +5,7 @@
     background: url(../../img/blg.jpg) no-repeat center center;
     background-size: cover;
     width: 100%;
-    height: 1000px;
+    height: 62.5em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,9 +141,10 @@
 	0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
+	width: 48rem;
+	height: 30rem;
+	/* max-width: 100%;
+	min-height: 480px; */
 }
 
 .form-container {
